package learn.design.pattern.structural.decorator;

/**
 * 调料装饰者对象
 */
public abstract class CondimentDecorator extends Beverage {

	public abstract String getDescription();
}
